# Programacion-C-Clase1

Programacion-C-Clase1/ejemplos/1/: ab
Programacion-C-Clase1/ejercicios/1/: if.c
Programacion-C-Clase1/ejercicios/2/: sw1  sw2  switch.c  switch2.c
Programacion-C-Clase1/ejercicios/3/: whi  while.c
Programacion-C-Clase1/ejercicios/4/: for  for.c
Programacion-C-Clase1/ejercicios/5/: for  foretiquetas.c
Programacion-C-Clase1/ejercicios/6/: funcion  funciones.c
Programacion-C-Clase1/ejercicios/7/: main  main.c  utils.c  utils.h
Programacion-C-Clase1/ejercicios/9/: Makefile  config.status  configure  configure.ac  main  main.c  utils.c
Programacion-C-Clase1/ejercicios/9/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
Programacion-C-Clase1/ejercicios/9/src/: Makefile  Makefile.am  Makefile.in  prueba  utils.h
Programacion-C-Clase1/ejercicios/9/src/.deps/: main.Po  utils.Po
