#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(prueba, 0.2, jose@jimenezluna.com)
AM_INIT_AUTOMAKE(prueba,0.2)
AC_CONFIG_SRCDIR([src/utils.h])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
#AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
